--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href=" " />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/dimomix-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="This is a crypto mining website that is offering a free package">
-    <title>Smart  Hashes</title>
+    <title>Dimomix</title>
   </head>
   <body>
     <div id="root"></div>
