--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/dimomix-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="This is a crypto mining website that is offering a free package">
+    <meta name="description" content="">
     <title>Dimomix</title>
   </head>
   <body>
